--- a/app/src/main/res/layout/add_activity.xml
+++ b/app/src/main/res/layout/add_activity.xml
@@ -31,26 +31,26 @@
         app:layout_constraintTop_toBottomOf="@+id/newActivityMessage" />
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:onClick="onAddClick"
-        android:text="Add"
+        android:onClick="onCancelClick"
+        android:text="Cancel"
         app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <Button
-        android:id="@+id/cancelButton"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
-        android:onClick="onCancelClick"
-        android:text="Cancel"
-        app:layout_constraintStart_toEndOf="@+id/addButton"
+        android:onClick="onAddClick"
+        android:text="Add"
+        app:layout_constraintStart_toEndOf="@+id/cancelButton"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <RadioGroup
