--- a/app/src/main/res/layout/top_workout_tab.xml
+++ b/app/src/main/res/layout/top_workout_tab.xml
@@ -18,12 +18,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/metricSpinner"
+        android:layout_width="130dp"
+        android:layout_height="26dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="96dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/orderSpinner"
+        android:layout_width="130dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="96dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
