--- a/app/src/main/res/layout/add_activity.xml
+++ b/app/src/main/res/layout/add_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.andrew.fitapp.AddActivity">
+    tools:context="com.example.andrew.fitapp.AddWorkoutActivity">
 
     <TextView
         android:id="@+id/newActivityMessage"
