--- a/app/src/main/res/layout/activity_add_event_type2.xml
+++ b/app/src/main/res/layout/activity_add_event_type2.xml
@@ -10,27 +10,28 @@
         android:id="@+id/repsText"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="184dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="200dp"
         android:ems="10"
         android:hint="Reps"
         android:inputType="number"
-        android:maxLength="2"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:maxLength="3"
+        app:layout_constraintStart_toEndOf="@+id/setsText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/setsText"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="184dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="200dp"
         android:ems="10"
         android:hint="Sets"
         android:imeOptions="actionNext"
         android:inputType="number"
-        android:maxLength="2"
+        android:maxLength="3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,12 +40,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="194dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="212dp"
         android:text="x"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/repsText"
-        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toEndOf="@+id/setsText"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,19 +54,21 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="88dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="40dp"
         android:onClick="onAddClick"
         android:text="Add"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cancelButton"
         app:layout_constraintTop_toBottomOf="@+id/repsText" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="40dp"
         android:onClick="onCancelClick"
         android:text="Cancel"
         app:layout_constraintStart_toStartOf="parent"
